update index. added timer.htm.

--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ R Users,
 Welcome to R Bootcamp 2020.  
 
 This webpage will be your guide to this course. Please Start by reading the 
-[Syllabus](about.html)
+[Syllabus](syllabus.html)
 
 
 ## Slides
