Added day 3 video

--- a/index.Rmd
+++ b/index.Rmd
@@ -38,6 +38,7 @@ This webpage will be your guide to this course. Please Start by reading the
 
 * [Day 1 - Full](https://youtu.be/ODPWOfPHVsk)
 * [Day 2 - Full](https://youtu.be/D0geSa7Y1kc)
+* [Day 3 - Full](https://youtu.be/Hv7Fdl9bqGI)
 
 
 # {.footer}
